--- a/build.gradle
+++ b/build.gradle
@@ -35,4 +35,5 @@ dependencies {
 	runtime('org.projectlombok:lombok')
 	compile('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile 'org.mongodb:mongo-java-driver:2.12.3'
 }
