--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,10 @@ dependencies {
 	compile group: 'org.mongodb.scala', name: 'mongo-scala-driver_2.12', version: '2.2.1'
 // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-mongodb
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb', version: '2.0.0.RELEASE'
+// https://mvnrepository.com/artifact/org.webjars/jquery
+	compile group: 'org.webjars', name: 'jquery', version: '2.1.4'
+// https://mvnrepository.com/artifact/org.webjars/bootstrap
+	compile group: 'org.webjars', name: 'bootstrap', version: '4.0.0'
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
     // https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver
